# SheetCI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example-report.md  launch-plan.md
examples/: broken-commission-model.xlsx  clean-model.xlsx
scripts/: create_example_wb.py
sheetci/: cli.py  reporters.py  scanner.py
tests/: test_cli.py  test_scanner.py
