[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sheetci"
version = "0.1.0"
description = "A CLI-first deterministic Excel workbook scanning engine."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openpyxl>=3.1.2",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sheetci = "sheetci.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sheetci*"]
